[gd_scene load_steps=18 format=4 uid="uid://cik30de5gaaah"]

[ext_resource type="Script" uid="uid://bqjdph4mocpw4" path="res://scenes/ingame_scene.gd" id="1_objyc"]
[ext_resource type="PackedScene" uid="uid://bkk87o2ooo6at" path="res://ui/overlays/fade_overlay.tscn" id="1_y6ebv"]
[ext_resource type="PackedScene" uid="uid://jyv4g54adkmo" path="res://ui/overlays/pause_overlay.tscn" id="3_8o178"]
[ext_resource type="PackedScene" uid="uid://dq28ji0rdxj3d" path="res://ui/overlays/conversation_overlay.tscn" id="4_2vs8u"]
[ext_resource type="PackedScene" uid="uid://i8e2stbpj7dh" path="res://ui/store.tscn" id="4_etwux"]
[ext_resource type="Texture2D" uid="uid://cmgteg2yd2miq" path="res://art/Grass.png" id="4_whno7"]
[ext_resource type="PackedScene" uid="uid://b2voc0fx6dhlk" path="res://ui/info_bar.tscn" id="5_iid22"]
[ext_resource type="Texture2D" uid="uid://b78o2hfiqi7mc" path="res://art/Water.png" id="5_r545j"]
[ext_resource type="Script" uid="uid://1coxxp30u5u0" path="res://scenes/Managers/spawner.gd" id="6_svgma"]
[ext_resource type="Script" uid="uid://b562tax7eouom" path="res://scenes/Managers/build_manager.gd" id="7_5fi20"]
[ext_resource type="Script" uid="uid://cpi302xs0rc7q" path="res://scenes/Managers/RoundManager.gd" id="9_1sh3m"]
[ext_resource type="Script" uid="uid://cdcsfkaue3pfh" path="res://scenes/Managers/economy_manager.gd" id="10_iid22"]
[ext_resource type="Texture2D" uid="uid://db1p86g8pb7ka" path="res://assets/IMG_1605.png" id="13_juwkt"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_dr5tw"]
texture = ExtResource("4_whno7")
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0
5:0/0 = 0
6:0/0 = 0
7:0/0 = 0
8:0/0 = 0
9:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
4:1/0 = 0
5:1/0 = 0
6:1/0 = 0
7:1/0 = 0
8:1/0 = 0
9:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0
4:2/0 = 0
5:2/0 = 0
6:2/0 = 0
7:2/0 = 0
8:2/0 = 0
9:2/0 = 0
10:2/0 = 0
0:3/0 = 0
1:3/0 = 0
2:3/0 = 0
3:3/0 = 0
4:3/0 = 0
5:3/0 = 0
6:3/0 = 0
7:3/0 = 0
8:3/0 = 0
9:3/0 = 0
10:3/0 = 0
0:4/0 = 0
1:4/0 = 0
2:4/0 = 0
3:4/0 = 0
4:4/0 = 0
5:4/0 = 0
6:4/0 = 0
7:4/0 = 0
8:4/0 = 0
9:4/0 = 0
0:5/0 = 0
1:5/0 = 0
2:5/0 = 0
3:5/0 = 0
4:5/0 = 0
5:5/0 = 0
6:5/0 = 0
7:5/0 = 0
8:5/0 = 0
9:5/0 = 0
0:6/0 = 0
1:6/0 = 0
2:6/0 = 0
3:6/0 = 0
4:6/0 = 0
5:6/0 = 0
6:6/0 = 0
7:6/0 = 0
8:6/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_e2o2j"]
texture = ExtResource("5_r545j")
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0

[sub_resource type="TileSet" id="TileSet_baj6j"]
sources/0 = SubResource("TileSetAtlasSource_dr5tw")
sources/1 = SubResource("TileSetAtlasSource_e2o2j")

[sub_resource type="Curve2D" id="Curve2D_x2oi4"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 1, 155, 0, 0, 0, 0, 572, 153)
}
point_count = 2

[node name="IngameScene" type="Node2D"]
script = ExtResource("1_objyc")

[node name="UI" type="CanvasLayer" parent="."]

[node name="InfoBar" parent="UI" instance=ExtResource("5_iid22")]

[node name="Store" parent="UI" groups=["Store"] instance=ExtResource("4_etwux")]

[node name="ConversationOverlay" parent="UI" instance=ExtResource("4_2vs8u")]

[node name="FadeOverlay" parent="UI" instance=ExtResource("1_y6ebv")]
unique_name_in_owner = true
visible = false

[node name="PauseOverlay" parent="UI" instance=ExtResource("3_8o178")]
unique_name_in_owner = true
process_mode = 2
visible = false

[node name="Terrain" type="TileMapLayer" parent="."]
tile_map_data = PackedByteArray("AAAAAAAAAAACAAUAAAAAAAEAAAACAAUAAAAAAAIAAAACAAUAAAAAAAMAAAACAAUAAAAAAAQAAAACAAUAAAAAAAUAAAACAAUAAAAAAAYAAAACAAUAAAAAAAcAAAACAAUAAAAAAAgAAQAAAAAAAAAAAAkAAQAAAAAAAAAAAAoAAQAAAAAAAAAAAAsAAAACAAUAAAAAAAwAAAACAAUAAAAAAA0AAAACAAUAAAAAAA4AAAACAAUAAAAAAA8AAAACAAUAAAAAABAAAAACAAUAAAAAABEAAAACAAUAAAAAABIAAAACAAUAAAAAABMAAAACAAUAAAAAABQAAAACAAUAAAABAAAAAAACAAUAAAABAAEAAAACAAUAAAABAAIAAAACAAUAAAABAAMAAAACAAUAAAABAAQAAAACAAUAAAABAAUAAAACAAUAAAABAAYAAAACAAUAAAABAAcAAAACAAUAAAABAAgAAQABAAAAAAABAAkAAQABAAAAAAABAAoAAQABAAAAAAABAAsAAAACAAUAAAABAAwAAAACAAUAAAABAA0AAAACAAUAAAABAA4AAAACAAUAAAABAA8AAAACAAUAAAABABAAAAACAAUAAAABABEAAAACAAUAAAABABIAAAACAAUAAAABABMAAAACAAUAAAABABQAAAACAAUAAAACAAAAAAACAAUAAAACAAEAAAACAAUAAAACAAIAAAACAAUAAAACAAMAAAACAAUAAAACAAQAAAACAAUAAAACAAUAAAACAAUAAAACAAYAAAACAAUAAAACAAcAAAACAAUAAAACAAgAAQACAAAAAAACAAkAAQACAAAAAAACAAoAAQACAAAAAAACAAsAAAACAAUAAAACAAwAAAACAAUAAAACAA0AAAACAAUAAAACAA4AAAACAAUAAAACAA8AAAACAAUAAAACABAAAAACAAUAAAACABEAAAACAAUAAAACABIAAAACAAUAAAACABMAAAACAAUAAAACABQAAAACAAUAAAADAAAAAAACAAUAAAADAAEAAAACAAUAAAADAAIAAAACAAUAAAADAAMAAAACAAUAAAADAAQAAAACAAUAAAADAAUAAAACAAUAAAADAAYAAAACAAUAAAADAAcAAAACAAUAAAADAAgAAQAAAAAAAAADAAkAAQADAAAAAAADAAoAAQADAAAAAAADAAsAAAACAAUAAAADAAwAAAACAAUAAAADAA0AAAACAAUAAAADAA4AAAACAAUAAAADAA8AAAACAAUAAAADABAAAAACAAUAAAADABEAAAACAAUAAAADABIAAAACAAUAAAADABMAAAACAAUAAAADABQAAAACAAUAAAAMAAAAAAACAAUAAAAMAAEAAAACAAUAAAAMAAIAAAACAAUAAAAMAAMAAAACAAUAAAAMAAQAAAACAAUAAAAMAAUAAAACAAUAAAAMAAYAAAACAAUAAAAMAAcAAAACAAUAAAAMAAgAAQADAAAAAAAMAAkAAQADAAAAAAAMAAoAAQADAAAAAAAMAAsAAAACAAUAAAAMAAwAAAACAAUAAAAMAA0AAAACAAUAAAAMAA4AAAACAAUAAAAMAA8AAAACAAUAAAAMABAAAAACAAUAAAAMABEAAAACAAUAAAAMABIAAAACAAUAAAAMABMAAAACAAUAAAAMABQAAAACAAUAAAANAAAAAAACAAUAAAANAAEAAAACAAUAAAANAAIAAAACAAUAAAANAAMAAAACAAUAAAANAAQAAAACAAUAAAANAAUAAAACAAUAAAANAAYAAAACAAUAAAANAAcAAAACAAUAAAANAAgAAQABAAAAAAANAAkAAQABAAAAAAANAAoAAQABAAAAAAANAAsAAAACAAUAAAANAAwAAAACAAUAAAANAA0AAAACAAUAAAANAA4AAAACAAUAAAANAA8AAAACAAUAAAANABAAAAACAAUAAAANABEAAAACAAUAAAANABIAAAACAAUAAAANABMAAAACAAUAAAANABQAAAACAAUAAAAOAAAAAAACAAUAAAAOAAEAAAACAAUAAAAOAAIAAAACAAUAAAAOAAMAAAACAAUAAAAOAAQAAAACAAUAAAAOAAUAAAACAAUAAAAOAAYAAAACAAUAAAAOAAcAAAACAAUAAAAOAAgAAQACAAAAAAAOAAkAAQACAAAAAAAOAAoAAQACAAAAAAAOAAsAAAACAAUAAAAOAAwAAAACAAUAAAAOAA0AAAACAAUAAAAOAA4AAAACAAUAAAAOAA8AAAACAAUAAAAOABAAAAACAAUAAAAOABEAAAACAAUAAAAOABIAAAACAAUAAAAOABMAAAACAAUAAAAOABQAAAACAAUAAAAPAAAAAAACAAUAAAAPAAEAAAACAAUAAAAPAAIAAAACAAUAAAAPAAMAAAACAAUAAAAPAAQAAAACAAUAAAAPAAUAAAACAAUAAAAPAAYAAAACAAUAAAAPAAcAAAACAAUAAAAPAAgAAQADAAAAAAAPAAkAAQADAAAAAAAPAAoAAQADAAAAAAAPAAsAAAACAAUAAAAPAAwAAAACAAUAAAAPAA0AAAACAAUAAAAPAA4AAAACAAUAAAAPAA8AAAACAAUAAAAPABAAAAACAAUAAAAPABEAAAACAAUAAAAPABIAAAACAAUAAAAPABMAAAACAAUAAAAPABQAAAACAAUAAAAQAAAAAAACAAUAAAAQAAEAAAACAAUAAAAQAAIAAAACAAUAAAAQAAMAAAACAAUAAAAQAAQAAAACAAUAAAAQAAUAAAACAAUAAAAQAAYAAAACAAUAAAAQAAcAAAACAAUAAAAQAAgAAQAAAAAAAAAQAAkAAQAAAAAAAAAQAAoAAQAAAAAAAAAQAAsAAAACAAUAAAAQAAwAAAACAAUAAAAQAA0AAAACAAUAAAAQAA4AAAACAAUAAAAQAA8AAAACAAUAAAAQABAAAAACAAUAAAAQABEAAAACAAUAAAAQABIAAAACAAUAAAAQABMAAAACAAUAAAAQABQAAAACAAUAAAARAAAAAAACAAUAAAARAAEAAAACAAUAAAARAAIAAAACAAUAAAARAAMAAAACAAUAAAARAAQAAAACAAUAAAARAAUAAAACAAUAAAARAAYAAAACAAUAAAARAAcAAAACAAUAAAARAAgAAQABAAAAAAARAAkAAQABAAAAAAARAAoAAQABAAAAAAARAAsAAAACAAUAAAARAAwAAAACAAUAAAARAA0AAAACAAUAAAARAA4AAAACAAUAAAARAA8AAAACAAUAAAARABAAAAACAAUAAAARABEAAAACAAUAAAARABIAAAACAAUAAAARABMAAAACAAUAAAARABQAAAACAAUAAAASAAAAAAACAAUAAAASAAEAAAACAAUAAAASAAIAAAACAAUAAAASAAMAAAACAAUAAAASAAQAAAACAAUAAAASAAUAAAACAAUAAAASAAYAAAACAAUAAAASAAcAAAACAAUAAAASAAgAAQACAAAAAAASAAkAAQACAAAAAAASAAoAAQACAAAAAAASAAsAAAACAAUAAAASAAwAAAACAAUAAAASAA0AAAACAAUAAAASAA4AAAACAAUAAAASAA8AAAACAAUAAAASABAAAAACAAUAAAASABEAAAACAAUAAAASABIAAAACAAUAAAASABMAAAACAAUAAAASABQAAAACAAUAAAATAAAAAAACAAUAAAATAAEAAAACAAUAAAATAAIAAAACAAUAAAATAAMAAAACAAUAAAATAAQAAAACAAUAAAATAAUAAAACAAUAAAATAAYAAAACAAUAAAATAAcAAAACAAUAAAATAAgAAQADAAAAAAATAAkAAQADAAAAAAATAAoAAQADAAAAAAATAAsAAAACAAUAAAATAAwAAAACAAUAAAATAA0AAAACAAUAAAATAA4AAAACAAUAAAATAA8AAAACAAUAAAATABAAAAACAAUAAAATABEAAAACAAUAAAATABIAAAACAAUAAAATABMAAAACAAUAAAATABQAAAACAAUAAAAUAAAAAAACAAUAAAAUAAEAAAACAAUAAAAUAAIAAAACAAUAAAAUAAMAAAACAAUAAAAUAAQAAAACAAUAAAAUAAUAAAACAAUAAAAUAAYAAAACAAUAAAAUAAcAAAACAAUAAAAUAAgAAQAAAAAAAAAUAAkAAQAAAAAAAAAUAAoAAQAAAAAAAAAUAAsAAAACAAUAAAAUAAwAAAACAAUAAAAUAA0AAAACAAUAAAAUAA4AAAACAAUAAAAUAA8AAAACAAUAAAAUABAAAAACAAUAAAAUABEAAAACAAUAAAAUABIAAAACAAUAAAAUABMAAAACAAUAAAAUABQAAAACAAUAAAAVAAAAAAACAAUAAAAVAAEAAAACAAUAAAAVAAIAAAACAAUAAAAVAAMAAAACAAUAAAAVAAQAAAACAAUAAAAVAAUAAAACAAUAAAAVAAYAAAACAAUAAAAVAAcAAAACAAUAAAAVAAgAAQABAAAAAAAVAAkAAQABAAAAAAAVAAoAAQABAAAAAAAVAAsAAAACAAUAAAAVAAwAAAACAAUAAAAVAA0AAAACAAUAAAAVAA4AAAACAAUAAAAVAA8AAAACAAUAAAAVABAAAAACAAUAAAAVABEAAAACAAUAAAAVABIAAAACAAUAAAAVABMAAAACAAUAAAAVABQAAAACAAUAAAAWAAAAAAACAAUAAAAWAAEAAAACAAUAAAAWAAIAAAACAAUAAAAWAAMAAAACAAUAAAAWAAQAAAACAAUAAAAWAAUAAAACAAUAAAAWAAYAAAACAAUAAAAWAAcAAAACAAUAAAAWAAgAAQACAAAAAAAWAAkAAQACAAAAAAAWAAoAAQACAAAAAAAWAAsAAAACAAUAAAAWAAwAAAACAAUAAAAWAA0AAAACAAUAAAAWAA4AAAACAAUAAAAWAA8AAAACAAUAAAAWABAAAAACAAUAAAAWABEAAAACAAUAAAAWABIAAAACAAUAAAAWABMAAAACAAUAAAAWABQAAAACAAUAAAAXAAAAAAACAAUAAAAXAAEAAAACAAUAAAAXAAIAAAACAAUAAAAXAAMAAAACAAUAAAAXAAQAAAACAAUAAAAXAAUAAAACAAUAAAAXAAYAAAACAAUAAAAXAAcAAAACAAUAAAAXAAgAAQADAAAAAAAXAAkAAQADAAAAAAAXAAoAAQADAAAAAAAXAAsAAAACAAUAAAAXAAwAAAACAAUAAAAXAA0AAAACAAUAAAAXAA4AAAACAAUAAAAXAA8AAAACAAUAAAAXABAAAAACAAUAAAAXABEAAAACAAUAAAAXABIAAAACAAUAAAAXABMAAAACAAUAAAAXABQAAAACAAUAAAAYAAAAAAACAAUAAAAYAAEAAAACAAUAAAAYAAIAAAACAAUAAAAYAAMAAAACAAUAAAAYAAQAAAACAAUAAAAYAAUAAAACAAUAAAAYAAYAAAACAAUAAAAYAAcAAAACAAUAAAAYAAgAAQAAAAAAAAAYAAkAAQAAAAAAAAAYAAoAAQAAAAAAAAAYAAsAAAACAAUAAAAYAAwAAAACAAUAAAAYAA0AAAACAAUAAAAYAA4AAAACAAUAAAAYAA8AAAACAAUAAAAYABAAAAACAAUAAAAYABEAAAACAAUAAAAYABIAAAACAAUAAAAYABMAAAACAAUAAAAYABQAAAACAAUAAAAZAAAAAAACAAUAAAAZAAEAAAACAAUAAAAZAAIAAAACAAUAAAAZAAMAAAACAAUAAAAZAAQAAAACAAUAAAAZAAUAAAACAAUAAAAZAAYAAAACAAUAAAAZAAcAAAACAAUAAAAZAAgAAQABAAAAAAAZAAkAAQABAAAAAAAZAAoAAQABAAAAAAAZAAsAAAACAAUAAAAZAAwAAAACAAUAAAAZAA0AAAACAAUAAAAZAA4AAAACAAUAAAAZAA8AAAACAAUAAAAZABAAAAACAAUAAAAZABEAAAACAAUAAAAZABIAAAACAAUAAAAZABMAAAACAAUAAAAZABQAAAACAAUAAAAaAAAAAAACAAUAAAAaAAEAAAACAAUAAAAaAAIAAAACAAUAAAAaAAMAAAACAAUAAAAaAAQAAAACAAUAAAAaAAUAAAACAAUAAAAaAAYAAAACAAUAAAAaAAcAAAACAAUAAAAaAAgAAQACAAAAAAAaAAkAAQACAAAAAAAaAAoAAQACAAAAAAAaAAsAAAACAAUAAAAaAAwAAAACAAUAAAAaAA0AAAACAAUAAAAaAA4AAAACAAUAAAAaAA8AAAACAAUAAAAaABAAAAACAAUAAAAaABEAAAACAAUAAAAaABIAAAACAAUAAAAaABMAAAACAAUAAAAaABQAAAACAAUAAAAbAAAAAAACAAUAAAAbAAEAAAACAAUAAAAbAAIAAAACAAUAAAAbAAMAAAACAAUAAAAbAAQAAAACAAUAAAAbAAUAAAACAAUAAAAbAAYAAAACAAUAAAAbAAcAAAACAAUAAAAbAAgAAQADAAAAAAAbAAkAAQADAAAAAAAbAAoAAQADAAAAAAAbAAsAAAACAAUAAAAbAAwAAAACAAUAAAAbAA0AAAACAAUAAAAbAA4AAAACAAUAAAAbAA8AAAACAAUAAAAbABAAAAACAAUAAAAbABEAAAACAAUAAAAbABIAAAACAAUAAAAbABMAAAACAAUAAAAbABQAAAACAAUAAAAcAAAAAAACAAUAAAAcAAEAAAACAAUAAAAcAAIAAAACAAUAAAAcAAMAAAACAAUAAAAcAAQAAAACAAUAAAAcAAUAAAACAAUAAAAcAAYAAAACAAUAAAAcAAcAAAACAAUAAAAcAAgAAQAAAAAAAAAcAAkAAQAAAAAAAAAcAAoAAQAAAAAAAAAcAAsAAAACAAUAAAAcAAwAAAACAAUAAAAcAA0AAAACAAUAAAAcAA4AAAACAAUAAAAcAA8AAAACAAUAAAAcABAAAAACAAUAAAAcABEAAAACAAUAAAAcABIAAAACAAUAAAAcABMAAAACAAUAAAAcABQAAAACAAUAAAAdAAAAAAACAAUAAAAdAAEAAAACAAUAAAAdAAIAAAACAAUAAAAdAAMAAAACAAUAAAAdAAQAAAACAAUAAAAdAAUAAAACAAUAAAAdAAYAAAACAAUAAAAdAAcAAAACAAUAAAAdAAgAAQABAAAAAAAdAAkAAQABAAAAAAAdAAoAAQABAAAAAAAdAAsAAAACAAUAAAAdAAwAAAACAAUAAAAdAA0AAAACAAUAAAAdAA4AAAACAAUAAAAdAA8AAAACAAUAAAAdABAAAAACAAUAAAAdABEAAAACAAUAAAAdABIAAAACAAUAAAAdABMAAAACAAUAAAAdABQAAAACAAUAAAAeAAAAAAACAAUAAAAeAAEAAAACAAUAAAAeAAIAAAACAAUAAAAeAAMAAAACAAUAAAAeAAQAAAACAAUAAAAeAAUAAAACAAUAAAAeAAYAAAACAAUAAAAeAAcAAAACAAUAAAAeAAgAAQACAAAAAAAeAAkAAQACAAAAAAAeAAoAAQACAAAAAAAeAAsAAAACAAUAAAAeAAwAAAACAAUAAAAeAA0AAAACAAUAAAAeAA4AAAACAAUAAAAeAA8AAAACAAUAAAAeABAAAAACAAUAAAAeABEAAAACAAUAAAAeABIAAAACAAUAAAAeABMAAAACAAUAAAAeABQAAAACAAUAAAAfAAAAAAACAAUAAAAfAAEAAAACAAUAAAAfAAIAAAACAAUAAAAfAAMAAAACAAUAAAAfAAQAAAACAAUAAAAfAAUAAAACAAUAAAAfAAYAAAACAAUAAAAfAAcAAAACAAUAAAAfAAgAAQADAAAAAAAfAAkAAQADAAAAAAAfAAoAAQADAAAAAAAfAAsAAAACAAUAAAAfAAwAAAACAAUAAAAfAA0AAAACAAUAAAAfAA4AAAACAAUAAAAfAA8AAAACAAUAAAAfABAAAAACAAUAAAAfABEAAAACAAUAAAAfABIAAAACAAUAAAAfABMAAAACAAUAAAAfABQAAAACAAUAAAAgAAAAAAACAAUAAAAgAAEAAAACAAUAAAAgAAIAAAACAAUAAAAgAAMAAAACAAUAAAAgAAQAAAACAAUAAAAgAAUAAAACAAUAAAAgAAYAAAACAAUAAAAgAAcAAAACAAUAAAAgAAgAAQAAAAAAAAAgAAkAAQAAAAAAAAAgAAoAAQAAAAAAAAAgAAsAAAACAAUAAAAgAAwAAAACAAUAAAAgAA0AAAACAAUAAAAgAA4AAAACAAUAAAAgAA8AAAACAAUAAAAgABAAAAACAAUAAAAgABEAAAACAAUAAAAgABIAAAACAAUAAAAgABMAAAACAAUAAAAgABQAAAACAAUAAAAhAAAAAAACAAUAAAAhAAEAAAACAAUAAAAhAAIAAAACAAUAAAAhAAMAAAACAAUAAAAhAAQAAAACAAUAAAAhAAUAAAACAAUAAAAhAAYAAAACAAUAAAAhAAcAAAACAAUAAAAhAAgAAQABAAAAAAAhAAkAAQABAAAAAAAhAAoAAQABAAAAAAAhAAsAAAACAAUAAAAhAAwAAAACAAUAAAAhAA0AAAACAAUAAAAhAA4AAAACAAUAAAAhAA8AAAACAAUAAAAhABAAAAACAAUAAAAhABEAAAACAAUAAAAhABIAAAACAAUAAAAhABMAAAACAAUAAAAhABQAAAACAAUAAAAiAAAAAAACAAUAAAAiAAEAAAACAAUAAAAiAAIAAAACAAUAAAAiAAMAAAACAAUAAAAiAAQAAAACAAUAAAAiAAUAAAACAAUAAAAiAAYAAAACAAUAAAAiAAcAAAACAAUAAAAiAAgAAQACAAAAAAAiAAkAAQACAAAAAAAiAAoAAQACAAAAAAAiAAsAAAACAAUAAAAiAAwAAAACAAUAAAAiAA0AAAACAAUAAAAiAA4AAAACAAUAAAAiAA8AAAACAAUAAAAiABAAAAACAAUAAAAiABEAAAACAAUAAAAiABIAAAACAAUAAAAiABMAAAACAAUAAAAiABQAAAACAAUAAAAjAAAAAAACAAUAAAAjAAEAAAACAAUAAAAjAAIAAAACAAUAAAAjAAMAAAACAAUAAAAjAAQAAAACAAUAAAAjAAUAAAACAAUAAAAjAAYAAAACAAUAAAAjAAcAAAACAAUAAAAjAAgAAQADAAAAAAAjAAkAAQADAAAAAAAjAAoAAQADAAAAAAAjAAsAAAACAAUAAAAjAAwAAAACAAUAAAAjAA0AAAACAAUAAAAjAA4AAAACAAUAAAAjAA8AAAACAAUAAAAjABAAAAACAAUAAAAjABEAAAACAAUAAAAjABIAAAACAAUAAAAjABMAAAACAAUAAAAjABQAAAACAAUAAAAEAAgAAQABAAAAAAAFAAgAAQACAAAAAAAGAAgAAQADAAAAAAAHAAgAAQAAAAAAAAAIAAgAAQABAAAAAAAJAAgAAQAAAAAAAAAKAAgAAQABAAAAAAAHAAkAAQADAAAAAAAIAAkAAQABAAAAAAAJAAkAAQAAAAAAAAAKAAkAAQABAAAAAAALAAgAAQACAAAAAAALAAkAAQACAAAAAAAJAAoAAQADAAAAAAAKAAoAAQABAAAAAAALAAoAAQACAAAAAAAGAAoAAQACAAAAAAAHAAoAAQADAAAAAAAIAAoAAQACAAAAAAAEAAoAAQAAAAAAAAAFAAoAAQABAAAAAAAEAAkAAQAAAAAAAAAFAAkAAQABAAAAAAAGAAkAAQACAAAAAAAFAAEAAAABAAEAAAAFAAAAAAABAAEAAAAEAAAAAAABAAEAAAAEAAEAAAABAAEAAAAEAAIAAAABAAEAAAAEAAMAAAABAAEAAAAEAAQAAAABAAEAAAAEAAUAAAABAAEAAAAEAAYAAAABAAEAAAAEAAcAAAABAAEAAAAFAAcAAAABAAEAAAAFAAYAAAABAAEAAAAFAAUAAAABAAEAAAAFAAQAAAABAAEAAAAFAAMAAAABAAEAAAAFAAIAAAABAAEAAAAGAAIAAAABAAEAAAAGAAEAAAABAAEAAAAGAAAAAAABAAEAAAAHAAAAAAABAAEAAAAHAAEAAAABAAEAAAAHAAIAAAABAAEAAAAHAAMAAAABAAEAAAAGAAMAAAABAAEAAAAGAAQAAAABAAEAAAAGAAUAAAABAAEAAAAGAAYAAAABAAEAAAAGAAcAAAABAAEAAAAHAAcAAAABAAEAAAAHAAYAAAABAAEAAAAHAAUAAAABAAEAAAAHAAQAAAABAAEAAAAIAAQAAAABAAEAAAAIAAMAAAABAAEAAAAIAAIAAAABAAEAAAAIAAEAAAABAAEAAAAIAAAAAAABAAEAAAAJAAAAAAABAAEAAAAJAAEAAAABAAEAAAAJAAIAAAABAAEAAAAJAAMAAAABAAEAAAAJAAQAAAABAAEAAAAJAAUAAAABAAEAAAAIAAUAAAABAAEAAAAIAAYAAAABAAEAAAAIAAcAAAABAAEAAAAJAAcAAAABAAEAAAAJAAYAAAABAAEAAAAKAAYAAAABAAEAAAAKAAUAAAABAAEAAAAKAAQAAAABAAEAAAAKAAMAAAABAAEAAAAKAAIAAAABAAEAAAAKAAEAAAABAAEAAAAKAAAAAAABAAEAAAALAAAAAAABAAEAAAALAAEAAAABAAEAAAALAAIAAAABAAEAAAALAAMAAAABAAEAAAALAAQAAAABAAEAAAALAAUAAAABAAEAAAALAAYAAAABAAEAAAALAAcAAAABAAEAAAAKAAcAAAABAAEAAAAJAA8AAAABAAEAAAAJAA4AAAABAAEAAAAJAA0AAAABAAEAAAAJAAwAAAABAAEAAAAJAAsAAAABAAEAAAAIAAsAAAABAAEAAAAHAAsAAAABAAEAAAAGAAsAAAABAAEAAAAFAAsAAAABAAEAAAAEAAsAAAABAAEAAAAEAAwAAAABAAEAAAAEAA0AAAABAAEAAAAEAA4AAAABAAEAAAAEAA8AAAABAAEAAAAEABAAAAABAAEAAAAEABEAAAABAAEAAAAEABIAAAABAAEAAAAEABMAAAABAAEAAAAEABQAAAABAAEAAAAFABQAAAABAAEAAAAFABMAAAABAAEAAAAFABIAAAABAAEAAAAFABEAAAABAAEAAAAFABAAAAABAAEAAAAFAA8AAAABAAEAAAAFAA4AAAABAAEAAAAFAA0AAAABAAEAAAAFAAwAAAABAAEAAAAGAAwAAAABAAEAAAAGAA0AAAABAAEAAAAGAA4AAAABAAEAAAAGAA8AAAABAAEAAAAGABAAAAABAAEAAAAGABEAAAABAAEAAAAGABIAAAABAAEAAAAGABMAAAABAAEAAAAGABQAAAABAAEAAAAHABQAAAABAAEAAAAHABMAAAABAAEAAAAHABIAAAABAAEAAAAHABEAAAABAAEAAAAHABAAAAABAAEAAAAHAA8AAAABAAEAAAAHAA4AAAABAAEAAAAHAA0AAAABAAEAAAAHAAwAAAABAAEAAAAIAAwAAAABAAEAAAAIAA0AAAABAAEAAAAIAA4AAAABAAEAAAAIAA8AAAABAAEAAAAIABAAAAABAAEAAAAIABEAAAABAAEAAAAIABIAAAABAAEAAAAIABMAAAABAAEAAAAIABQAAAABAAEAAAAJABQAAAABAAEAAAAJABMAAAABAAEAAAAJABIAAAABAAEAAAAJABEAAAABAAEAAAAJABAAAAABAAEAAAAKABAAAAABAAEAAAAKAA8AAAABAAEAAAAKAA4AAAABAAEAAAAKAA0AAAABAAEAAAAKAAwAAAABAAEAAAAKAAsAAAABAAEAAAALAAsAAAABAAEAAAALAAwAAAABAAEAAAALAA0AAAABAAEAAAALAA4AAAABAAEAAAALAA8AAAABAAEAAAALABAAAAABAAEAAAALABEAAAABAAEAAAAKABEAAAABAAEAAAAKABIAAAABAAEAAAAKABMAAAABAAEAAAAKABQAAAABAAEAAAALABQAAAABAAEAAAALABMAAAABAAEAAAALABIAAAABAAEAAAA=")
tile_set = SubResource("TileSet_baj6j")

[node name="Path2D" type="Path2D" parent="."]
curve = SubResource("Curve2D_x2oi4")

[node name="PathFollow2D" type="PathFollow2D" parent="Path2D"]
position = Vector2(1, 155)
rotation = -0.00350261

[node name="Spawner" type="Node2D" parent="."]
script = ExtResource("6_svgma")

[node name="BuildManager" type="Node2D" parent="." groups=["BuildManager"]]
script = ExtResource("7_5fi20")

[node name="RoundManager" type="Node2D" parent="." node_paths=PackedStringArray("spawner") groups=["RoundManager"]]
script = ExtResource("9_1sh3m")
spawner = NodePath("../Spawner")

[node name="EconomyManager" type="Node" parent="." groups=["EconomyManager"]]
script = ExtResource("10_iid22")

[node name="Camera2D" type="Camera2D" parent="."]
unique_name_in_owner = true
anchor_mode = 0

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(888, 209)
scale = Vector2(0.325, 0.325)
texture = ExtResource("13_juwkt")
